# PrusaSlicer

./: .gitignore  CMakeLists.txt  GCODE_VISUALIZER_ANALYSIS.md  README.md
calibration/: aruco.scad
calibration/data/: aruco_positions.json
calibration/scripts/: convert_calibration.py  run_calibration.py  visualize_calibration.py
gcode_visualizer/: BedRenderer.cpp  BedRenderer.hpp  CMakeLists.txt  CameraController.cpp  CameraController.hpp  GCodeConverter.cpp  GCodeConverter.hpp  GCodePathRenderer.cpp  GCodePathRenderer.hpp  GCodeVisualizerApp.cpp  GCodeVisualizerApp.hpp  ImageExporter.cpp  ImageExporter.hpp  PrinterConfig.cpp  PrinterConfig.hpp  SimpleGCodeParser.cpp  SimpleGCodeParser.hpp  TestCubeRenderer.cpp  TestCubeRenderer.hpp  USAGE_PRINTER_CONFIG.md  example_printer_config.cpp  libslic3r_version.h  libslic3r_version.h.in  main.cpp  test_different_printers.sh
gcode_visualizer/stubs/libslic3r/GCode/: GCodeProcessor.hpp
gcode_visualizer/stubs/libvgcode/glad/include/glad/: gl.h
gcode_visualizer/stubs/libvgcode/include/: GCodeInputData.hpp  PathVertex.hpp  Types.hpp  Viewer.hpp
